- Fix for bug #10890 @- Fixed bugs in the mcrypt extension that caused crashes (Derick)